add ignored dirs and files

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,12 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# this project
+/0_data
+/1_checkpoint
+/2_result
+*_list
+*.mp4
+tmp*
+command_line_result*
